<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:layout_margin="20dp"
    tools:context=".MedirSen">

    <TextView
        android:id="@+id/textSen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/TituloMeSen"
        android:textAlignment="center"
        android:textSize="30sp"
        android:layout_marginBottom="90dp"/>

    <Button
        android:id="@+id/btnComen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnmesen"
        android:textSize="36sp"
        android:layout_marginBottom="70dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textX"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txtx"
            android:textAlignment="textStart"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textY"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txty"
            android:textAlignment="textStart"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textZ"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txtz"
            android:textAlignment="textStart"
            android:textSize="24sp" />
    </LinearLayout>
</LinearLayout>